convert original onboarding flow to answer more info about rasa q

--- a/data/nlu/nlu.yml
+++ b/data/nlu/nlu.yml
@@ -1197,6 +1197,8 @@ nlu:
     - [my machine](install_type)
     - [my laptop](install_type)
     - [local machine](install_type)
+- intent: how_to_build_bot
+  examples: |
 - intent: how_to_get_started
   examples: |
     - can you help me to build a bot
