--- a/config.yml
+++ b/config.yml
@@ -22,16 +22,19 @@ pipeline:
   - amount-of-money
 - name: EntitySynonymMapper
 - name: ResponseSelector
+  model_confidence: linear_norm
   retrieval_intent: out_of_scope
   scale_loss: false
   epochs: 100
   constrain_similarities: true
 - name: ResponseSelector
+  model_confidence: linear_norm
   retrieval_intent: faq
   scale_loss: false
   epochs: 100
   constrain_similarities: true
 - name: ResponseSelector
+  model_confidence: linear_norm
   retrieval_intent: chitchat
   scale_loss: false
   epochs: 100
@@ -40,6 +43,7 @@ pipeline:
   threshold: 0.7
 policies:
 - name: TEDPolicy
+  model_confidence: linear_norm
   max_history: 10
   epochs: 20
   batch_size:
