--- a/data/rules/rules.yml
+++ b/data/rules/rules.yml
@@ -63,11 +63,17 @@ rules:
 - rule: Getting started with Rasa playground
   conversation_start: true
   steps:
-  - intent: get_started_intro
+  - intent: how_to_get_started
   - action: action_greet_user
+  - action: utter_ask_playground_install_info
+
+- rule: Getting started with Rasa playground
+  steps:
+  - intent: how_to_get_started
   - action: utter_ask_playground_install_info
 
 - rule: Trigger response selector from button payload
   steps:
   - intent: trigger_response_selector
   - action: action_trigger_response_selector
+  wait_for_user_input: false
